# kdebase-opensuse

./: CMakeLists.txt  update_rpm
branding/root/etc/: kde4rc
branding/root/etc/kde4/share/config/: dolphinrc  kdeglobals  kickoffrc  oxygenrc  plasma-desktoprc  plasmarc  startupconfigkeys
branding/root/usr/share/kde4/apps/desktoptheme/default/widgets/: background.svgz
branding/root/usr/share/kde4/apps/desktoptheme/openSUSEdefault/: metadata.desktop
branding/root/usr/share/kde4/apps/desktoptheme/openSUSEdefault/widgets/: background.svgz  busywidget.svgz  panel-background.svgz
branding/root/usr/share/kde4/apps/kdm/themes/SUSE/: KdmGreeterTheme.desktop  color.kcsrc  suse.xml
branding/root/usr/share/kde4/apps/plasma/layout-templates/org.kde.plasma-desktop.defaultPanel/contents/: layout.js
branding/root/usr/share/kde4/config/SuSE/default/: bookmarks.xml  feeds.opml  kdeglobals
branding/root/usr/share/wallpapers/openSUSEdefault/: metadata.desktop
config-files/etc/kde4/: kmixrc
config-files/etc/kde4/share/config/: activitymanager-pluginsrc  kdeglobals  kioslaverc  krunnerrc  kservicemenurc  kuriikwsfilterrc  kwinrc  nepomukserverrc  nepomukstrigirc  oxygenrc  plasmarc  synaptiksrc
config-files/usr/share/kde4/apps/color-schemes/: openSUSE.colors  openSUSElight.colors
config-files/usr/share/kde4/apps/desktoptheme/openSUSE/: colors  metadata.desktop
config-files/usr/share/kde4/apps/desktoptheme/openSUSE/dialogs/: shutdowndialog.svgz
config-files/usr/share/kde4/apps/desktoptheme/openSUSE/icons/: battery.svgz  device.svgz  konv_message.svgz  kpackagekit.svgz  presence-applet.svgz  quassel.svgz
config-files/usr/share/kde4/apps/desktoptheme/openSUSE/opaque/dialogs/: background.svgz
config-files/usr/share/kde4/apps/desktoptheme/openSUSE/toolbar-icons/: go.svgz  list.svgz  media.svgz  window.svgz
config-files/usr/share/kde4/apps/desktoptheme/openSUSE/translucent/dialogs/: background.svgz  shutdowndialog.svgz
config-files/usr/share/kde4/apps/desktoptheme/openSUSE/translucent/widgets/: background.svgz  panel-background.svgz  toolbox.svgz  tooltip.svgz  translucentbackground.svgz
config-files/usr/share/kde4/apps/desktoptheme/openSUSE/widgets/: action-overlays.svgz  actionbutton.svgz  activities.svgz  arrows.svgz  background.svgz  bar_meter_horizontal.svgz  bar_meter_vertical.svgz  busywidget.svgz  button.svgz  calendar.svgz  checkmarks.svgz  clock.svgz  configuration-icons.svgz  panel-background.svgz  scrollbar.svgz  slider.svgz  systemtray.svgz  tasks.svgz  toolbox.svgz  tooltip.svgz  translucentbackground.svgz  viewitem.svgz
config-files/usr/share/kde4/apps/konsole/: Root_Shell.profile  Shell.profile
config-files/usr/share/kde4/apps/plasma-desktop/updates/: 10-opensuse-plasmanm.js  add-f1-shortcut.js
config-files/usr/share/kde4/config/: kglobalshortcutsrc
config-files/usr/share/kde4/config/SuSE/default/: MozillaFirefox.desktop  Office.desktop  SuSE.desktop  Support.desktop  clock-no-events.js.live  kcmnspluginrc.live  kdedrc.live  nepomukserverrc  nepomukserverrc.live  trash.desktop
config-files/usr/share/kde4/env/: startkde.proxy.sh  startkde.suse.sh
config-files/usr/share/kde4/services/searchproviders/: pin.desktop  rpm.desktop  sourceforge.desktop
config-files/usr/share/opensuse-kiwi/live_user_scripts/: kde4.sh
config-files/var/adm/fillup-templates/: displaymanager-kdm4.fillup  sysconfig.displaymanager-kde4-kdm  sysconfig.displaymanager-kdm
greeter/: CMakeLists.txt  SUSEgreeter.desktop  greet.xml  greet_footer.html  greet_header.html  greet_section.html  greetings.cpp  greetings.h  main.cpp
greeter/pics/: CMakeLists.txt
greeter/video/: CMakeLists.txt
krpmview/: CMakeLists.txt  Messages.sh  konqfilemgr_rpm.desktop  krpmview.cpp  krpmview.desktop  krpmview.h  krpmview_factory.cpp  krpmview_factory.h
ksplash/: CMakeLists.txt
ksplash/ksplashx-suse/: CMakeLists.txt  Theme.rc
ksplash/ksplashx-suse/1600x1200/: description.txt
migrate/: AppsList.cpp  AppsList.h  CMakeLists.txt  MigrationWizard.cpp  MigrationWizard.h  QuickMigrate.cpp  QuickMigrate.h  main.cpp  mainwizard.ui
po/: fill_po.sh
sysinfo/: CMakeLists.txt  README
sysinfo/po/: af.po  ar.po  bg.po  bn.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  en_US.po  es.po  et.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  km.po  ko.po  lo.po  lt.po  mk.po  mr.po  nb.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  (+16 more)
totranslate/: README  addpanel.po  amarok.spec.po  extract_all_strings.sh  extract_strings.sh  kaffeine.spec.po  kbstateapplet.pot  kde4-openSUSE.pot  kde4-plasma-addons.spec.po  kdebase4-runtime.spec.po  kdebase4-workspace-missing.po  kdebase4-workspace.spec.po  kdebase4.spec.po  kdegames4.spec.po  kdegraphics4.spec.po  kdelibs4.spec.po  kdemultimedia4.spec.po  kdenetwork4.spec.po  plasma-addons.spec.po  policykit-kde.po  quickaccess.po  quicklauncher.po  spec_list
