install( FILES Preview.png Theme.rc DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/ksplashx-suse )
install( FILES 1600x1200/description.txt
    1600x1200/kde-logo.png 1600x1200/opensuse-logo.png
    1600x1200/progress0.png 1600x1200/progress1.png 1600x1200/progress2.png
    1600x1200/progress3.png 1600x1200/progress4.png
    DESTINATION ${DATA_INSTALL_DIR}/ksplash/Themes/ksplashx-suse/1600x1200 )
# 1600x1200/background.png and 1920x1200/background.png are symlinked from wallpapers
